--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     #carrusel {
       width: 100%;
-      height: auto;
+      height: 100%;
       overflow: hidden;
       display: flex;
       justify-content: center;
@@ -20,7 +20,8 @@
     }
 
     #carrusel img {
-      width: auto;
+      justify-self: center;
+      width: 100%;
       height: 100%;
       object-fit: cover;
       transition: opacity 1s ease-in-out;
@@ -38,8 +39,14 @@
 </head>
 <body>
   <div id="contenedor">
-    <button id="fullScreenBtn" onclick="launchIntoFullscreen(document.documentElement);">
-      Pantalla completa e iniciar
+    <button id="fullScreenBtn" onclick="launchIntoFullscreen(document.documentElement);" style="cursor:pointer">
+      <span style="font-size: 100px;">Click para empezar con pantalla completa</span>
+    </button>
+    <button id="fullScreenBtnClose" onclick="toggleFullScreen()" style="position:absolute;bottom:0px;left:0px;z-index: 1;">
+      <span>-</span>
+    </button>
+    <button id="fullScreenBtnRefresh" onclick="window.location.reload();" style="position:absolute;bottom:0px;left:30px;z-index: 1;">
+      <span>O</span>
     </button>
     <div id="carrusel" style="display: none;"></div>
   </div>
@@ -48,7 +55,7 @@
     // Find the right method, call on correct element
     function launchIntoFullscreen(element) {
       document.getElementById("fullScreenBtn").style.display = "none";
-      document.getElementById("carrusel").style.display = "block";
+      document.getElementById("carrusel").style.display = "flex";
 
       if(element.requestFullscreen) {
         element.requestFullscreen();
@@ -58,6 +65,12 @@
         element.webkitRequestFullscreen();
       } else if(element.msRequestFullscreen) {
         element.msRequestFullscreen();
+      }
+    }
+
+    function toggleFullScreen() {
+      if (document.fullscreenElement) {
+        document.exitFullscreen?.();
       }
     }
   </script>
